smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/tagged-literals-version-2.0.smithy
// Expected one of LBRACE('{'), LBRACKET('['), TEXT_BLOCK('"""'), STRING('"'), NUMBER, IDENTIFIER; but found POUND('#')
$version: "2"

namespace smithy.example

@pattern(#re "^\d+$")
string Foo
